--- a/app/set.env
+++ b/app/set.env
@@ -1,4 +1,5 @@
 MERCHANT_TOKEN=test_token_123
-PROVIDER_BASE_URL=https://api.provider.com
-PROVIDER_API_KEY=provider_test_key
-DEBUG=true
+WEBHOOK_ENABLED=True
+WEBHOOK_SECRET_KEY=test_secret_key_123
+BASE_WEBHOOK_URL=http://localhost:8000
+DEBUG=True
